# qttest_example

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/src/: main.cpp  main_widget.cpp  main_widget.h
lib/: CMakeLists.txt
lib/src/: async_reply.h  downloader.cpp  downloader.h  random.cpp  random.h
tests/: CMakeLists.txt
tests/src/: main.cpp  test_main.cpp  test_main.h
